[gd_scene load_steps=6 format=2]

[ext_resource path="res://raw_assets/enemy/skeleton/SkeletonASprite.tres" type="SpriteFrames" id=1]
[ext_resource path="res://game_assets/enemy/Skeleton.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30.6967, 24.8117 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 70.8402, 25.4319 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.98357
height = 34.8162

[node name="Skeleton" type="KinematicBody2D" groups=[
"Enemy",
]]
script = ExtResource( 2 )

[node name="Areas" type="Node2D" parent="."]

[node name="AttackArea" type="Area2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/AttackArea"]
modulate = Color( 0.0980392, 0.984314, 0.0235294, 1 )
shape = SubResource( 2 )

[node name="PlayerDectector" type="Area2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/PlayerDectector"]
modulate = Color( 0.0156863, 0.0745098, 0.984314, 1 )
position = Vector2( -15.8885, 0 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "Idle"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6.10255, 0 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 6.10255, 0 )
[connection signal="body_entered" from="Areas/AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="Areas/AttackArea" to="." method="_on_AttackArea_body_exited"]
[connection signal="body_entered" from="Areas/PlayerDectector" to="." method="_on_PlayerDectector_body_entered"]
[connection signal="body_exited" from="Areas/PlayerDectector" to="." method="_on_PlayerDectector_body_exited"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
